/**
 * Core layered telemetry v2 capture format.
 *
 * The core format is game-agnostic and carries timing/file structure.
 * Game-specific payloads are attached through oneof extension points.
 */
syntax = "proto3";

package telemetry.v2;

import "google/protobuf/timestamp.proto";
import "telemetry/v2/echo_arena.proto";

option csharp_namespace = "Nevr.Telemetry.V2";
option go_package = "github.com/echotools/nevr-common/v4/gen/go/telemetry/v2;telemetryv2";
option java_multiple_files = true;
option java_outer_classname = "CaptureProto";
option java_package = "com.echotools.nevr.telemetry.v2";

/**
 * Streaming envelope for capture records.
 *
 * A capture stream consists of one header, many frames, and one footer.
 */
message Envelope {
  oneof message {
    CaptureHeader header = 1;
    Frame frame = 2;
    CaptureFooter footer = 3;
  }
}

/**
 * Session-scoped metadata written once at capture start.
 */
message CaptureHeader {
  // Unique identifier for the capture (UUID format recommended).
  string capture_id = 1;

  // Capture creation timestamp; frame timestamps are deltas from this base.
  google.protobuf.Timestamp created_at = 2;

  // Core capture format version. For this schema it must be 2.
  uint32 format_version = 3;

  // Arbitrary metadata (game version, server IP, recorder build, etc).
  map<string, string> metadata = 4;

  // Game-specific header payloads.
  oneof game_header {
    // Echo Arena game header payload.
    EchoArenaHeader echo_arena = 10;
    // reserved 11 to 99; // Future game headers.
  }
}

/**
 * Per-frame timing envelope.
 *
 * Core frame overhead is intentionally minimal (two varints + oneof tag).
 */
message Frame {
  // Sequential frame index, 0-based.
  uint32 frame_index = 1;

  // Milliseconds since CaptureHeader.created_at.
  uint32 timestamp_offset_ms = 2;

  // Game-specific frame payloads.
  oneof payload {
    // Game payload field range: 10-99.
    EchoArenaFrame echo_arena = 10;

    // Non-game payload field range: 100-199 (annotations/debug/future use).
  }
}

/**
 * Capture summary and trailing indexes for efficient seeking.
 */
message CaptureFooter {
  // Total number of frames written.
  uint32 frame_count = 1;

  // Total capture duration in milliseconds.
  uint32 duration_ms = 2;

  // Total encoded byte size for the capture stream/file.
  uint64 total_bytes = 3;

  // Keyframe index for time-based seek.
  repeated KeyframeEntry keyframe_index = 4;

  // Event index for type-based seek.
  repeated EventIndexEntry event_index = 5;
}

/**
 * Byte offset for a seekable keyframe.
 */
message KeyframeEntry {
  uint32 frame_index = 1;
  uint64 byte_offset = 2;
}

/**
 * Mapping from event type to frames that contain it.
 */
message EventIndexEntry {
  string event_type = 1;
  repeated uint32 frame_indices = 2;
}
